--- a/assets/scss/editor.scss
+++ b/assets/scss/editor.scss
@@ -19,8 +19,8 @@ html {
 
 body {
 	min-height: auto;
-	--viewport-width: calc(100vw - var(--admin-menu-width, 160px) - var(--block-sidebar-width, 0px)); // Requires 0px for calc().
-	--editor-viewport-width: calc(100vw - var(--admin-menu-width, 160px) - var(--block-sidebar-width, 0px)); // Requires 0px for calc().
+	--viewport-width: calc(100vw - var(--admin-menu-width, 160px) - var(--block-sidebar-width, 0px)); // Requires 0px for calc(). These are both in admin.scss too. Not sure if we need both.
+	--editor-viewport-width: calc(100vw - var(--admin-menu-width, 160px) - var(--block-sidebar-width, 0px)); // Requires 0px for calc(). These are both in admin.scss too. Not sure if we need both.
 	--list-item-margin-bottom: var(--spacing-xs);
 
 	@include body();
@@ -85,21 +85,6 @@ ol.wp-block li.wp-block {
 	max-width: 100%;
 	margin-right: 0;
 	margin-left: 0;
-
-	// Fixes Mai Divider (and other stuff) when alignfull inside of a Group or Cover block where content align is not center.
-	// This needs to be accounted for in editor.scss too.
-
-	&.wp-block-cover[style*="--cover-block-justify-content:start"] > .wp-block-cover__inner-container > .alignfull,
-	&.wp-block-group[style*="--group-block-justify-content:start"] > .wp-block-group__inner-container > .alignfull {
-		margin-left: calc(var(--side-spacing) * -1);
-		width: var(--viewport-width);
-	}
-
-	&.wp-block-cover[style*="--cover-block-justify-content:end"] > .wp-block-cover__inner-container > .alignfull,
-	&.wp-block-group[style*="--group-block-justify-content:end"] > .wp-block-group__inner-container > .alignfull {
-		margin-right: calc(var(--side-spacing) * -1);
-		width: var(--viewport-width);
-	}
 }
 
 .wp-block.is-reusable {
@@ -107,31 +92,6 @@ ol.wp-block li.wp-block {
 	margin-right: 0;
 	margin-left: 0;
 }
-
-// [data-content-align="start"] {
-// 	margin-inline-start: 0;
-// }
-
-// [data-content-align="end"] {
-// 	margin-inline-end: 0;
-// }
-
-// [data-align] > [data-type="core/paragraph"] {
-// 	float: none;
-// }
-
-// [data-align="left"] > [data-type="core/paragraph"] {
-// 	margin-right: auto;
-// }
-
-// [data-align="right"] > [data-type="core/paragraph"] {
-// 	margin-left: auto;
-// }
-
-// [data-align="center"] > [data-type="core/paragraph"] {
-// 	margin-right: auto;
-// 	margin-left: auto;
-// }
 
 [data-type="core/pullquote"][data-align="left"],
 [data-type="core/pullquote"][data-align="right"] {
@@ -177,9 +137,15 @@ ol.wp-block li.wp-block {
 	--group-block-justify-content: start;
 	--cover-block-justify-content: start;
 
-	> .wp-block-group__inner-container > .wp-block,
-	> .wp-block-cover__inner-container > .wp-block {
+	> .wp-block-group__inner-container > .wp-block:not([data-align="full"]),
+	> .wp-block-cover__inner-container > .wp-block:not([data-align="full"]) {
 		margin-left: unset;
+	}
+
+	> .wp-block-group__inner-container > .wp-block[data-align="full"],
+	> .wp-block-cover__inner-container > .wp-block[data-align="full"] {
+		width: var(--editor-viewport-width);
+		margin-left: calc(var(--side-spacing) * -1) !important;
 	}
 }
 
@@ -192,9 +158,15 @@ ol.wp-block li.wp-block {
 	--group-block-justify-content: end;
 	--cover-block-justify-content: end;
 
-	> .wp-block-group__inner-container > .wp-block,
-	> .wp-block-cover__inner-container > .wp-block {
+	> .wp-block-group__inner-container > .wp-block:not([data-align="full"]),
+	> .wp-block-cover__inner-container > .wp-block:not([data-align="full"]) {
 		margin-right: unset;
+	}
+
+	> .wp-block-group__inner-container > .wp-block[data-align="full"],
+	> .wp-block-cover__inner-container > .wp-block[data-align="full"] {
+		width: var(--editor-viewport-width);
+		margin-right: calc(var(--side-spacing) * -1) !important;
 	}
 }
 
